// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ServiceAssurance/DigitalProduct/Detail/elements/ReturnForm/index render 1`] = `
<WithStyles(Component)
  maxWidth="xs"
  onClose={[MockFunction]}
  open={null}
>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "padding": "16px 24px",
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <TextField
          control={Object {}}
          disabled={false}
          error={false}
          helperText=""
          label="Evidence to Customer"
          maxLength={1500}
          minRows={4}
          multiline={true}
          name="note"
          placeholder="Please describe the reason.."
          required={true}
          shouldUnregister={false}
        />
      </WithStyles(ForwardRef(Grid))>
      
      <WithStyles(ForwardRef(Grid))
        container={true}
        item={true}
        justifyContent="center"
        pt={2}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <Button
            disabled={false}
            leftIcon={null}
            loading={false}
            ml={0}
            mr={0}
            onClick={[MockFunction]}
            rightIcon={null}
            rounded="normal"
            textTransform="uppercase"
            variant="ghost"
          >
            CANCEL
          </Button>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <Button
            disabled={true}
            leftIcon={null}
            loading={false}
            ml={0}
            mr={0}
            onClick={[Function]}
            rightIcon={null}
            rounded="normal"
            textTransform="uppercase"
            type="submit"
            variant="filled"
          >
            SUBMIT
          </Button>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</WithStyles(Component)>
`;

exports[`src/containers/ServiceAssurance/DigitalProduct/Detail/elements/ReturnForm/index render with formState true 1`] = `
<WithStyles(Component)
  maxWidth="xs"
  onClose={[MockFunction]}
  open={null}
>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "padding": "16px 24px",
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <TextField
          control={Object {}}
          disabled={false}
          error={false}
          helperText=""
          label="Evidence to Customer"
          maxLength={1500}
          minRows={4}
          multiline={true}
          name="note"
          placeholder="Please describe the reason.."
          required={true}
          shouldUnregister={false}
        />
      </WithStyles(ForwardRef(Grid))>
      
      <WithStyles(ForwardRef(Grid))
        container={true}
        item={true}
        justifyContent="center"
        pt={2}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <Button
            disabled={false}
            leftIcon={null}
            loading={false}
            ml={0}
            mr={0}
            onClick={[MockFunction]}
            rightIcon={null}
            rounded="normal"
            textTransform="uppercase"
            variant="ghost"
          >
            CANCEL
          </Button>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <Button
            disabled={false}
            leftIcon={null}
            loading={false}
            ml={0}
            mr={0}
            onClick={[Function]}
            rightIcon={null}
            rounded="normal"
            textTransform="uppercase"
            type="submit"
            variant="filled"
          >
            SUBMIT
          </Button>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</WithStyles(Component)>
`;

exports[`src/containers/ServiceAssurance/DigitalProduct/Detail/elements/ReturnForm/index render with full props 1`] = `
<WithStyles(Component)
  maxWidth="xs"
  onClose={[MockFunction]}
  open={null}
>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "padding": "16px 24px",
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <TextField
          control={Object {}}
          disabled={false}
          error={false}
          helperText=""
          label="Evidence to Customer"
          maxLength={1500}
          minRows={4}
          multiline={true}
          name="note"
          placeholder="Please describe the reason.."
          required={true}
          shouldUnregister={false}
        />
      </WithStyles(ForwardRef(Grid))>
      
      <WithStyles(ForwardRef(Grid))
        container={true}
        item={true}
        justifyContent="center"
        pt={2}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <Button
            disabled={false}
            leftIcon={null}
            loading={false}
            ml={0}
            mr={0}
            onClick={[MockFunction]}
            rightIcon={null}
            rounded="normal"
            textTransform="uppercase"
            variant="ghost"
          >
            CANCEL
          </Button>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <Button
            disabled={true}
            leftIcon={null}
            loading={false}
            ml={0}
            mr={0}
            onClick={[Function]}
            rightIcon={null}
            rounded="normal"
            textTransform="uppercase"
            type="submit"
            variant="filled"
          >
            SUBMIT
          </Button>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</WithStyles(Component)>
`;
